from ship import Ship

class Grid:
    def __init__(self, height, width):
        self.__height = height
        self.__width = width
        self.__ships = []
