class ShipCtrl():
    def __init__(self):
        self.__ships = []

    @property
    def ships(self):
        return self.__ships

    def add(self):
        pass

    def list(self):
        pass

    def modify(self):
        pass

    def remove(self):
        pass
