class Ship:
    def __init__(self):
        pass